refactor(document-ingestion): Replace hardcoded document ID with a constant and improve overlap size calculation